crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLW3201_bad_dunder_name.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
bad_dunder_name.py:2:9: PLW3201 Bad or misspelled dunder method name `_init_`. (bad-dunder-name)
  |
1 | class Apples:
2 |     def _init_(self):  # [bad-dunder-name]
  |         ^^^^^^ PLW3201
3 |         pass
  |

bad_dunder_name.py:5:9: PLW3201 Bad or misspelled dunder method name `__hello__`. (bad-dunder-name)
  |
3 |         pass
4 | 
5 |     def __hello__(self):  # [bad-dunder-name]
  |         ^^^^^^^^^ PLW3201
6 |         print("hello")
  |

bad_dunder_name.py:8:9: PLW3201 Bad or misspelled dunder method name `__init_`. (bad-dunder-name)
   |
 6 |         print("hello")
 7 | 
 8 |     def __init_(self):  # [bad-dunder-name]
   |         ^^^^^^^ PLW3201
 9 |         # author likely unintentionally misspelled the correct init dunder.
10 |         pass
   |

bad_dunder_name.py:12:9: PLW3201 Bad or misspelled dunder method name `_init_`. (bad-dunder-name)
   |
10 |         pass
11 | 
12 |     def _init_(self):  # [bad-dunder-name]
   |         ^^^^^^ PLW3201
13 |         # author likely unintentionally misspelled the correct init dunder.
14 |         pass
   |

bad_dunder_name.py:16:9: PLW3201 Bad or misspelled dunder method name `___neg__`. (bad-dunder-name)
   |
14 |         pass
15 | 
16 |     def ___neg__(self):  # [bad-dunder-name]
   |         ^^^^^^^^ PLW3201
17 |         # author likely accidentally added an additional `_`
18 |         pass
   |

bad_dunder_name.py:20:9: PLW3201 Bad or misspelled dunder method name `__inv__`. (bad-dunder-name)
   |
18 |         pass
19 | 
20 |     def __inv__(self):  # [bad-dunder-name]
   |         ^^^^^^^ PLW3201
21 |         # author likely meant to call the invert dunder method
22 |         pass
   |


