crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__allow_magic_value_types.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: MagicValueComparison
    body: "Magic value used in comparison, consider replacing \"Hunter2\" with a constant variable"
    commit: ~
    fixable: false
  location:
    row: 59
    column: 21
  end_location:
    row: 59
    column: 30
  fix: ~
  parent: ~
- kind:
    name: MagicValueComparison
    body: "Magic value used in comparison, consider replacing 3.141592653589793 with a constant variable"
    commit: ~
    fixable: false
  location:
    row: 65
    column: 20
  end_location:
    row: 65
    column: 40
  fix: ~
  parent: ~
- kind:
    name: MagicValueComparison
    body: "Magic value used in comparison, consider replacing b\"something\" with a constant variable"
    commit: ~
    fixable: false
  location:
    row: 74
    column: 17
  end_location:
    row: 74
    column: 29
  fix: ~
  parent: ~

