crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__max_args.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: TooManyArguments
    body: Too many arguments to function call (6/4)
    commit: ~
    fixable: false
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 5
  fix: ~
  parent: ~
- kind:
    name: TooManyArguments
    body: Too many arguments to function call (6/4)
    commit: ~
    fixable: false
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 5
  fix: ~
  parent: ~

