crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__max_args_with_dummy_variables.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- - kind:
      name: TooManyArguments
      body: Too many arguments to function call (6 > 5)
      suggestion: ~
      fixable: false
    location:
      row: 9
      column: 4
    end_location:
      row: 9
      column: 5
    fix: ~
    parent: ~

