crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__max_branches.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- - kind:
      name: TooManyBranches
      body: Too many branches (2 > 1)
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 4
    end_location:
      row: 6
      column: 5
    fix: ~
    parent: ~
  - kind:
      name: TooManyBranches
      body: Too many branches (2 > 1)
      suggestion: ~
      fixable: false
    location:
      row: 15
      column: 8
    end_location:
      row: 15
      column: 9
    fix: ~
    parent: ~

