crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__max_return_statements.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: TooManyReturnStatements
    body: Too many return statements (2/1)
    commit: ~
    fixable: false
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 5
  fix: ~
  parent: ~

