crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__while_loop_exists.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: WhileLoopExists
    body: "Used `while` loop"
    suggestion: ~
    fixable: false
  location:
    row: 2
    column: 0
  end_location:
    row: 4
    column: 13
  fix: ~
  parent: ~
- kind:
    name: WhileLoopExists
    body: "Used `while` loop"
    suggestion: ~
    fixable: false
  location:
    row: 6
    column: 0
  end_location:
    row: 9
    column: 25
  fix: ~
  parent: ~

